crates/runtime/tests/search/snapshots/integration_models__search__arrow-s3_vectors-no_text_engine-dataset-multi_column_megascience_vector_search_sql_projection_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, question, subject, trunc(_score, 3) as _score FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
|               |         ProjectionExec: expr=[_score@1 as _score, answer@2 as answer, id@0 as id, question@3 as question, subject@4 as subject]                                                                                                                                                                  |
|               |           HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2, question@4, subject@5]                                                                                                                     |
|               |             CoalescePartitionsExec                                                                                                                                                                                                                                                               |
|               |               ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as _score]                                                                                                                                                                                                        |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                               |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                           |
|               |                     S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                                                                                 |
|               |             SchemaCastScanExec                                                                                                                                                                                                                                                                   |
|               |               BytesProcessedExec                                                                                                                                                                                                                                                                 |
|               |                 DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                                                                                |
|               |                                                                                                                                                                                                                                                                                                  |
