crates/runtime/tests/search/snapshots/integration_models__search__arrow-s3_vectors-no_text_engine-dataset-multi_embeddings_megascience_vector_search_sql_basic_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
|               |           ProjectionExec: expr=[_score@1 as _score, answer@2 as answer, id@0 as id]                                                                                                                                                 |
|               |             HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2]                                                                             |
|               |               CoalescePartitionsExec                                                                                                                                                                                                |
|               |                 ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as _score]                                                                                                                                         |
|               |                   BytesProcessedExec                                                                                                                                                                                                |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                            |
|               |                       S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                  |
|               |               SchemaCastScanExec                                                                                                                                                                                                    |
|               |                 BytesProcessedExec                                                                                                                                                                                                  |
|               |                   DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                 |
|               |                                                                                                                                                                                                                                     |
